@@ -2,4 +2,4 @@ fpac (3.27.19) unstable; urgency=low
 
   * Initial Release.
 
- -- Lee Woldanski <ve7fet@tparc.org>  Sat, 17 Sep 2011 22:00:00 -0800
+ -- Lee Woldanski <ve7fet@tparc.org>  Mon, 06 Feb 2012 21:00:00 -0800
